...
                }
        }
    }
    
    private var sideBar: some View {
        List(selection: $store.path.sending(\.push)) {
            Section("앱 설정") {
                NavigationLink("iCloud 설정", value: SettingsReducer.Path.State.iCloud(.initialState))
            }
            Section("지원") {
                NavigationLink("의견 보내기", value: SettingsReducer.Path.State.sendFeedback(.initialState))
                NavigationLink("앱 버전", value: SettingsReducer.Path.State.appVersion(.initialState))
            }
...
